# scprs-analysis

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.mcp.dockerignore  Dockerfile.web  Dockerfile.web.dockerignore  README.md  SECURITY.md  app.py  fly.toml  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements-web.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  cmas-refresh.yml  (+9 more)
docs/: BACKLOG.md  CMAS.md  COPILOT_STUDIO.md  EPROCURE.md  PIPELINE.md  REMOTE_MCP.md  RETROSPECTIVE.md  SCPRS_NOTES.md  WAREHOUSE.md  WAVE2_SCOPE.md  WEB_APP.md
references/: abbreviations.csv  canary_fixture.json  departments.csv  supplier_master.csv
scripts/: build_batch.ps1  enrich_batch.ps1  enrich_daily.ps1  refresh_pipeline.ps1  register_refresh_task.ps1  replay_queries.py
src/: auth.py  canary.py  charting.py  cmas.py  config.py  contracts.py  data_sync.py  deploy_check.py  eprocure.py  golive_check.py  health.py  mcp_server.py  model.py  nl_query.py  observability.py  pipeline_monitor.py  query_log.py  scprs.py  scraper.py  supplier_master.py  supplier_research.py  triage.py  warehouse.py  warehouse_diff.py  warehouse_query.py  web_app.py
tests/: test_auth.py  test_canary.py  test_charting.py  test_cmas.py  test_config.py  test_contracts.py  test_data_sync.py  test_deploy_check.py  test_details.py  test_eprocure.py  test_golive_check.py  test_health.py  test_model.py  test_pipeline_monitor.py  test_scprs.py  test_scraper.py  test_supplier_master.py  test_supplier_research.py  test_triage.py  test_warehouse.py  test_warehouse_diff.py  test_warehouse_query.py
(+14 files in other folders)
