[project]
name = "scprs-analysis"
version = "0.1.0"
description = "Analysis of SCPRS procurement data"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, flake8-bandit (security)
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are fine in tests

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
