[project]
name = "scprs-analysis"
version = "0.1.0"
description = "Analysis of SCPRS procurement data"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, flake8-bandit (security)
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are fine in tests
# warehouse.py is a SQL-generation module: table/column names come only from
# internal constants and values are always parameterized (reviewed). The dynamic
# DDL lives inside multi-line f-strings where inline noqa isn't possible.
"src/warehouse.py" = ["S608", "E501"]  # long lines are SQL text inside f-strings

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B608 (hardcoded SQL) — same rationale as the ruff S608 ignore above; ruff's
# S608 still guards every other module.
skips = ["B608"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so `from src import ...` resolves under a bare
# `pytest` invocation (e.g. in CI), matching how `python -m pytest` works
# locally. Without this, CI fails to import the src package.
pythonpath = ["."]
